--- a/RFIDP2P3_Web/appsettings.json
+++ b/RFIDP2P3_Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RFIDAPIBaseUrl": "https://localhost:7072/api"
 }
